Extract base styles into their own file

--- a/less/index.less
+++ b/less/index.less
@@ -1,11 +1,2 @@
 @import "../node_modules/reset-css/less/reset.less";
-
-/* Set every element's box-sizing to border-box */
-* {
-    box-sizing: border-box;
-}
-
-html,
-body {
-    height: 100%;
-}
+@import "base.less";
