Add & style header
- Add responsive meta tag
- Link Google Fonts

--- a/less/index.less
+++ b/less/index.less
@@ -1,2 +1,58 @@
 @import "../node_modules/reset-css/less/reset.less";
 @import "base.less";
+
+@font-stack-display: "Lora-Bold", serif;
+@font-stack-condensed: "Oswald", sans-serif;
+
+.header {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding: 7.2rem 16.8rem;
+
+    &-title {
+        font-family: @font-stack-display;
+        font-size: 4.4rem;
+        font-weight: bold;
+        color: #0006fc;
+        width: 100%;
+        margin-bottom: 2.4rem;
+    }
+
+    nav {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .nav-link {
+        font-family: @font-stack-condensed;
+        font-size: 14px;
+        font-weight: 500;
+        color: #02489a;
+        letter-spacing: 2.33px;
+        text-transform: uppercase;
+        position: relative;
+        padding: 20px 0;
+        opacity: 0.7;
+    }
+
+    .nav-link::before {
+        transition: 300ms;
+        height: 4px;
+        content: "";
+        position: absolute;
+        background-color: #02489a;
+        width: 100%;
+        bottom: 4px;
+        opacity: 0;
+    }
+
+    .nav-link:hover {
+        opacity: 1;
+    }
+
+    .nav-link:hover::before {
+        bottom: 10px;
+        opacity: 1;
+    }
+}
