--- a/less/base.less
+++ b/less/base.less
@@ -5,4 +5,19 @@
 html,
 body {
     height: 100%;
+    font-size: 62.5%;
+}
+
+body {
+    padding: 3.2rem;
+    font-size: 1.6rem;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+li {
+    list-style: none;
 }
