Add sketch file and pngs
Signed-off-by: Miikis <Miikis@users.noreply.github.com>

--- a/less/base.less
+++ b/less/base.less
@@ -8,9 +8,17 @@ body {
     font-size: 62.5%;
 }
 
+html {
+    width: 100%;
+    background: #fafcff;
+}
+
 body {
-    padding: 3.2rem;
+    width: calc(100% - 3.2rem);
+    margin: 1.6rem auto;
     font-size: 1.6rem;
+    background: url(../images/background.png);
+    background-size: cover;
 }
 
 a {
